FEATURE: Send text in My Torrents to clipboard [TuxPaper]
FEATURE: Added "DLing For" and "Seeding For" time columns to "My Torrents" [TuxPaper]
FEATURE: When torrent data is missing, you can change directory via the context menu [TuxPaper]
FEATURE: UDP tracker version 2 support added [Parg]
FEATURE: Linux system tray support [Gudy]

CHANGE: Azureus should work with SWT 2.12 until we break backwards compat. again. [TuxPaper]
CHANGE: All progress/piece bars re-done (again) [TuxPaper]
CHANGE: Can set per-torrent and global peer connection limits [Nolar]
CHANGE: Shrink "My Torrents" Context menu [TuxPaper]
CHANGE: Ignore Share Ratio can now be non-integer [TuxPaper]
CHANGE: File descriptor handles increased from default of 256 to 8192 under OSX [Nolar]
CHANGE: Systray4j removed: system tray support now from SWT built-in code [Gudy]
CHANGE: Config/pref file saving less likely to fail [Nolar]

BUGFIX: Multiple shares of same resources causing problems (e.g. share contents+share contents recursive of same dir) [Parg]
BUGFIX: Fix for discarded data due to occasional duplicate request [Nolar]
BUGFIX: Fix for underlying socket handles not closing under linux ("Too many open files") [Nolar]
BUGFIX: First Priority rules based on time now work across sessions [TuxPaper]
BUGFIX: Freeze on exit under OSX [Gudy]




16.03.04 | Azureus 2.0.8.4

CHANGE: WebUI plugin included in mainline (see http://azureus.sf.net/CVS/web.interface.howto.htm)
CHANGE: Much more reliable SF mirror auto-update handling [Nolar]

BUGFIX: Fix for loading .torrent files via web-browser/shell/doubleclick/etc [Nolar]



15.03.04 | Azureus 2.0.8.2

FEATURE: Show last time IPFilter list was updated in status area [Parg]
FEATURE: Support for "compact" tracker announce protocol [Parg]
FEATURE: Support for "key" tracker announce protocol [Parg]
FEATURE: Download Speed column in "My Torrents" turns red if below speed set in Queue config. [TuxPaper]
FEATURE: Webplugin swing ui has status area with total ul/dl [Parg]